[package]
name = "Tarkov-DisbotRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "http", "model"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"