[package]
name = "tarkov_market_observer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", features = ["client", "framework", "rustls_backend", "standard_framework"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
tungstenite = "0.20.1"