[package]
name = "tarkov_market_observer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-http = "0.3"
twilight-gateway = "0.3"
twilight-cache-inmemory = "0.1"
twilight-model = "0.3"
twilight-util = "0.1"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"